# chat

./: .env.convex  .env.convex.example  .env.local.example  .gitignore  .prettierrc  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
convex/: auth.ts  convex.config.ts  crons.ts  delete_triggers.ts  encryption.ts  http.ts  preflight.ts  schema.ts
convex/_generated/: api.d.ts
convex/chat/: context.ts  create.ts  delete.ts  encoding.ts  generate.ts  get.ts  incremental_updates.ts  update.ts
convex/files/: actions.ts  create.ts  create_file.ts  create_files.ts  delete.ts  delete_files.ts  delete_triggers.ts  get.ts  get_file.ts  upload_action.ts
convex/models/: create.ts  delete.ts  get.ts  openrouter.ts  update.ts
convex/tokens/: actions.ts  get.ts  get_tokens.ts  modify_tokens.ts  update.ts
convex/users/: delete.ts  delete_triggers.ts  get.ts  update.ts  user.ts
public/: manifest.json
scripts/: generateKeys.mjs
server/: .env.example  .gitignore  Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs  response.rs  router.rs  util.rs
server/src/api/handler/: mod.rs  not_found.rs
server/src/api/handler/files/: delete.rs  download.rs  mod.rs  presign.rs  upload.rs
server/src/api/middleware/: auth.rs  base.rs  cors.rs  mod.rs
server/src/core/: config.rs  init.rs  mod.rs  state.rs
server/src/files/: mod.rs
src/: middleware.ts
src/app/: layout.tsx  page.tsx  test.tsx
src/components/: error.tsx  global-error-fallback.tsx  global-error.tsx
src/lib/: date.ts  hooks.ts  utils.ts
src/styles/: globals.css  message.css
(+99 files in other folders)
