[package]
name = "ai-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart", "ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
convex = "0.9.0"
dotenv = "0.15.0"
hmac = "0.12.1"
hyper = "1.6.0"
hyper-util = "0.1.14"
jwt = "0.16.0"
log = "0.4.27"
nanoid = "0.4.0"
new_mime_guess = "4.0.4"
opendal = { version = "0.53.3", features = ["services-fs", "services-s3"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
simplelog = "0.12.2"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
